# data2notion

./: CHANGELOG.md  DESIGN.md  LICENSE  README.md  lint.sh  pyproject.toml
.github/workflows/: pylint.yml
src/: data2notion_main.py  main.py
src/data2notion/: serialization.py
src/data2notion/plugins/: __init__.py  csv_plugin.py  json_plugin.py  plugin.py  prometheus_plugin.py
