[project]
name = "data2notion"
dynamic = ["version"]

authors = [
  { name="Pierre Souchay", email="pierre@souchay.net" },
]
description = "Synchronize your data with a Notion database"
readme = "README.md"
repository = "https://github.com/pierresouchay/data2notion"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asynciolimiter>=1.2.0",
    "click",
    "notion-client~=2.2",
]

[project.optional-dependencies]
dev = [
    "build",
    "flake8~=7.2",
    "isort~=6.0",
    "mypy~=1.15.0",
    "pylint~=3.3.6",
    "ruff~=0.11.4",
    "twine",
]

[project.scripts]
data2notion = "data2notion_main:main"

[project.urls]
Homepage = "https://github.com/pierresouchay/data2notion"
Issues = "https://github.com/pierresouchay/data2notion/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/data2notion_main.py"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
# Note that we change the behaviour of this flag below
macos-max-compat = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 88
# Assume Python 3.9+
target-version = "py39"

[tool.pylint.messages_control]
max-line-length = 88

disable = [
  "missing-docstring",
  "line-too-long",
  "fixme",
  "too-few-public-methods",
  "unnecessary-pass",
  "useless-return",
]
